# Large-Language-Bayes-Model

./: .gitignore  .gitmodules  README.md  USAGE.md  analysis.py  evaluate.py  explore_models.ipynb  generate_and_sample.py  generate_codes.py  generate_models.py  pyproject.toml  requirements.txt  sample_from_codes.py  stacking_experiments_overview.md  trial.py
docs/: experiment_pipeline.md  launch_checklist.md  quickstart.md
large_language_bayes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llb/: __init__.py  codes.py  core.py  examples.py  io_utils.py  llm.py  mcmc_log.py  model_generator.py  run_manifest.py
notebooks/: city_temperature.ipynb  coin_demo.ipynb  local_ollama_demo.ipynb  rain_demo.ipynb
scripts/: aggregate_paper_results.py  smoke_all_tasks.sh  submit_paper_experiments.sh  watch_progress.sh
slurm/: gen_and_sample_coin.sbatch  gen_codes_gpu.sbatch  gen_gemma4.sbatch  gen_llama32.sbatch  generate_models.sbatch  merge_chunks.sbatch  sample_cpu.sbatch  sample_cpu_topup.sbatch
test/: coin.py  coin_ollama.py  coin_standard.py  rain.py
tests/: test_aggregate_paper_results.py  test_evaluate_large_k.py  test_fema_tasks_end_to_end.py  test_fema_tasks_schema.py  test_gemma4_live.py  test_generate_and_sample_and_evaluate.py  test_generate_models.py  test_llama32_live.py  test_loo_parallel_equiv.py  test_stage_a_dedup.py  test_stage_b_hashes.py  test_test_scoring.py
