[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "large-language-bayes"
version = "0.1.0"
description = "Bayesian inference with LLM-generated NumPyro models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "requests>=2.31",
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "numpyro>=0.14.0",
  "rich>=15.0.0",
  "matplotlib>=3.10.8",
  "pandas>=2.3.3",
  "scipy>=1.15.3",
]

[tool.setuptools]
packages = ["llb"]

[tool.pytest.ini_options]
markers = [
    "live: requires a running Ollama server with the model pulled",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
